agregado logo de crudo

--- a/relaxer/relaxer.html
+++ b/relaxer/relaxer.html
@@ -1,87 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-	<link rel="stylesheet" href="style.css">
-	<meta charset="UTF-8">
-	<title>Review Relaxer</title>
-</head>
-<body> -->
-<!-- 	<section class="top">
-		<header></header>
-	</section>
-
-	<section class="bot">
-		<div></div>		
-	</section> -->
-<!-- 	<video poster="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/polina.jpg" id="bgvid" playsinline autoplay muted loop> -->
-<!--   WCAG general accessibility recommendation is that media such as background video play through only once. Loop turned on for the purposes of illustration; if removed, the end of the video will fade in the same way created by pressing the "Pause" button  -->
-<!-- 	<source src="http://thenewcode.com/assets/videos/polina.webm" type="video/webm">
-	<source src="http://thenewcode.com/assets/videos/polina.mp4" type="video/mp4">
-	</video>
-	<div id="polina">
-	<h1>Polina</h1>
-	<p>filmed by Alexander Wagner 2011
-	<p><a href="http://thenewcode.com/777/Create-Fullscreen-HTML5-Page-Background-Video">original article</a>
-	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur porta dictum turpis, eu mollis justo gravida ac. Proin non eros blandit, rutrum est a, cursus quam. Nam ultricies, velit ac suscipit vehicula, turpis eros sollicitudin lacus, at convallis mauris magna non justo. Etiam et suscipit elit. Morbi eu ornare nulla, sit amet ornare est. Sed vehicula ipsum a mattis dapibus. Etiam volutpat vel enim at auctor.</p>
-	<p>Aenean pharetra convallis pellentesque. Vestibulum et metus lectus. Nunc consectetur, ipsum in viverra eleifend, erat erat ultricies felis, at ultricies mi massa eu ligula. Suspendisse in justo dapibus metus sollicitudin ultrices id sed nisl.</p>
-	<button>Pause</button>
-	</div> -->
-
-<!-- 	<div class="video-background">
-	    <div class="video-foreground">
-	      <iframe src="https://www.youtube.com/embed/qnhfmCc4v3g?controls=0&showinfo=0&rel=0&autoplay=1&loop=1&playlist=qnhfmCc4v3g" frameborder="0" allowfullscreen></iframe>
-	    </div>
-	  </div>
-
-	<div id="vidtop-content">
-	<div class="vid-info">
-		  <h1>YouTube Fullscreen Background Demo</h1>
-		  <p>The International Space Station orbits the Earth every 92 minutes, with its crew seeing a sunrise 15 times a day. It exists as a scientific, educational, and engineering platform in low orbit, 330 to 435 kilometres above the Earth.
-	     <p>Original timelapse by Riccardo Rossi (ISAA), used under a Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License. Raw photos courtesy of http://eol.jsc.nasa.gov/
-		 <a href="">Full article</a>
-	  </div>
-	</div> -->
-
-<!-- 	<script>
-		var vid = document.getElementById("bgvid");
-		var pauseButton = document.querySelector("#polina button");
-
-		if (window.matchMedia('(prefers-reduced-motion)').matches) {
-		    vid.removeAttribute("autoplay");
-		    vid.pause();
-		    pauseButton.innerHTML = "Paused";
-		}
-
-		function vidFade() {
-		  vid.classList.add("stopfade");
-		}
-
-		vid.addEventListener('ended', function()
-		{
-		// only functional if "loop" is removed 
-		vid.pause();
-		// to capture IE10
-		vidFade();
-		}); 
-
-
-		pauseButton.addEventListener("click", function() {
-		  vid.classList.toggle("stopfade");
-		  if (vid.paused) {
-		    vid.play();
-		    pauseButton.innerHTML = "Pause";
-		  } else {
-		    vid.pause();
-		    pauseButton.innerHTML = "Paused";
-		  }
-		})
-
-
-	</script> -->
-<!-- </body>
-</html> -->
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -94,9 +10,11 @@
 	<header>
 		
 		<div class="title">
+
 			<h2>alt-J</h2>
 			<h1>Relaxer Review</h1>
 			<span>&#8711</span>
+
 		</div>
 		<div class="fullscreen-bg">
 		    <video loop muted autoplay poster="" class="fullscreen-bg__video" plays-inline width='80%'>
@@ -105,8 +23,14 @@
 	<!-- 	        <source src="video/big_buck_bunny.ogv" type="video/ogg"> -->
 		    </video>
 		</div>
+
 	</header>
+	<picture>
+		<img src="img/crudologo.png" alt="" class="logo" width="200px">
+	</picture>
+
 	<section class="content">
+
 		<h2>Lo nuevo de Alt-J en este 2017</h2>
 		<img src="img/relaxer.jpg" alt="" width="60%">
 		<p>
