imagen agregada por si no carga el video

--- a/relaxer/relaxer.html
+++ b/relaxer/relaxer.html
@@ -17,7 +17,7 @@
 
 		</div>
 		<div class="fullscreen-bg">
-		    <video loop muted autoplay poster="" class="fullscreen-bg__video" plays-inline width='80%'>
+		    <video loop muted autoplay poster="img/altjbg.jpg" class="fullscreen-bg__video" plays-inline width='80%'>
 		        <source src="video/3ww.webm" type="video/webm">
 		        <source src="video/3ww.mp4" type="video/mp4">
 	<!-- 	        <source src="video/big_buck_bunny.ogv" type="video/ogg"> -->
@@ -32,7 +32,9 @@
 	<section class="content">
 
 		<h2>Lo nuevo de Alt-J en este 2017</h2>
-		<img src="img/relaxer.jpg" alt="" width="60%">
+		<figure>
+			<img src="img/relaxer.jpg" alt="" width="60%">
+		</figure>
 		<p>
 			Relaxer es el nombre del nuevo disco de estudio......jowñofijwep wrvn vpirw l 0pvp rfp0pir f pvjefpo fpqef fieq v duq0pefqegqg w euf efou feoufb 
 			efefjo fioe fpqe fpqe0p epf eqwefwernfp0pef eprgwr fe fe0p0pñ oe qepf efperwgqq epf eqfpeq fepf f
