mejorado pagina principal

--- a/index.html
+++ b/index.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<link href="https://fonts.googleapis.com/css?family=Barrio" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Raleway:300|400|600" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<meta charset="UTF-8">
 	<title>Document</title>
 </head>
 <body> 
-	<header class="grit"><h2>Crudo</h2></header>
+	<header>
+		<img src="relaxer/img/crudologo.png" class="logo" alt="CRUDO" width="150px">
+	</header>
+	<a href="relaxer/relaxer.html" class="dest">		
+		<section class="destacado">
+			<article class="dp">
+				<span>Destacado:</span>
+				<h1>Review de Relaxer lo nuevo de alt-J</h1>
+				<p>Entra y lee cual es nuestra perspectiva del esperado nuevo album de alt-J</p>
+			</article> 
+		</section>
+	</a>
 	<section class="contenido" >
 		<h1> crudo</h1>
 		<a href="post white/white.html"> math rock</a>
@@ -17,6 +28,8 @@
 		<a href=""></a>
 
 	</section>
+
+	<footer></footer>
 	
 </body>
 </html>
