mejorado aun mas

--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
 </head>
 <body> 
 	<header>
-		<img src="relaxer/img/crudologo.png" class="logo" alt="CRUDO" width="150px">
+		<a href="index.html" class="crudo">		
+			<img src="relaxer/img/crudologo.png" class="logo" alt="CRUDO" width="150px">
+		</a>
+		<nav>
+			<ul>
+				<a href=""><li>Podcast</li></a>
+				<a href=""><li>Posts</li></a>
+				<a href=""><li>Noticias</li></a>
+			</ul>
+		</nav>
 	</header>
 	<a href="relaxer/relaxer.html" class="dest">		
 		<section class="destacado">
@@ -20,16 +29,25 @@
 		</section>
 	</a>
 	<section class="contenido" >
-		<h1> crudo</h1>
-		<a href="post white/white.html"> math rock</a>
-		<a href="relaxer/relaxer.html"> relaxer</a>
-		<a href="indie/indie.html">indie</a>
-		<a href=""></a>
-		<a href=""></a>
+		<h2>articulos</h2>
+		<p><a href="post white/white.html"> math rock</a></p>
+		<p><a href="relaxer/relaxer.html"> relaxer</a></p>
+		<p><a href="indie/indie.html">indie</a></p>
+		<p><a href=""></a></p>
+		<p><a href=""></a></p>
 
 	</section>
 
-	<footer></footer>
+	<section class="qo">
+		<h3> Esta es una 'cita' de algun famoso</h3>
+		<p> el famoso</p>
+		
+	</section>
+
+	<footer>
+		<a href=""><img src="img/icon4.png" class="social social1"></a>
+		<a href=""><img src="img/icon5.png" class="social social2"></a>
+	</footer>
 	
 </body>
 </html>
