agregada barra de navegación a relaxer

--- a/relaxer/relaxer.html
+++ b/relaxer/relaxer.html
@@ -25,9 +25,20 @@
 		</div>
 
 	</header>
-	<picture>
-		<img src="img/crudologo.png" alt="" class="logo" width="200px">
-	</picture>
+	
+	<section class="hdr">
+		<a href="index.html" class="crudo">		
+			<img src="img/crudologo.png" class="logo" alt="CRUDO" width="150px">
+		</a>
+		<nav>
+			<ul>
+				<a href=""><li>Podcast</li></a>
+				<a href=""><li>Posts</li></a>
+				<a href=""><li>Noticias</li></a>
+			</ul>
+		</nav>
+	</section>
+
 
 	<section class="content">
 
@@ -84,7 +95,10 @@
 		</article>
 	</section>
 
-	<footer></footer>
+	<footer>
+		<a href=""><img src="../img/icon4.png" class="social social1"></a>
+		<a href=""><img src="../img/icon5.png" class="social social2"></a>
+	</footer>
 	
 </body>
 </html>
