--- a/relaxer/relaxer.html
+++ b/relaxer/relaxer.html
@@ -27,7 +27,7 @@
 	</header>
 	
 	<section class="hdr">
-		<a href="index.html" class="crudo">		
+		<a href="../index.html" class="crudo">		
 			<img src="img/crudologo.png" class="logo" alt="CRUDO" width="150px">
 		</a>
 		<nav>
