agregados post a inicio

--- a/index.html
+++ b/index.html
@@ -29,7 +29,22 @@
 		</section>
 	</a>
 	<section class="contenido" >
-		<h2>articulos</h2>
+		<h3 class="ra">Artículos recientes:</h3 class="">
+		<div class="artc">
+
+			<article id="ar1">post 5: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo totam magnam atque laborum repudiandae, esse ratione provident, nam minus, deleniti voluptatibus veritatis. Porro iste doloremque itaque obcaecati pariatur maiores repellendus.</article>
+			<article id="ar2">post 1: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia laudantium, sint cum, nihil nisi praesentium aperiam maxime rem, ipsam illum blanditiis? Maiores necessitatibus dignissimos debitis sit atque nulla voluptatum facere!</article>
+			<article id="ar3">post 2: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima quasi voluptate placeat, delectus illum, harum ad labore veritatis id eos libero veniam asperiores ducimus nihil? Veniam dolorum voluptas nesciunt magni!</article>
+			<article id="ar4">post 3: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci dolores, voluptatibus optio excepturi. Dignissimos eaque quo, quibusdam nesciunt nulla ducimus, consequuntur odit consequatur temporibus autem quidem voluptate, ea earum laudantium?</article>
+			<article id="ar5">post 4: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore aperiam, labore sequi est esse nesciunt facere ipsa obcaecati minima a, incidunt itaque odio ipsum animi ipsam autem. Ad tenetur, quae!</article>
+
+		</div>
+		
+		
+	
+		
+		
+		
 		<p><a href="post white/white.html"> math rock</a></p>
 		<p><a href="relaxer/relaxer.html"> relaxer</a></p>
 		<p><a href="indie/indie.html">indie</a></p>
@@ -48,6 +63,13 @@
 		<a href=""><img src="img/icon4.png" class="social social1"></a>
 		<a href=""><img src="img/icon5.png" class="social social2"></a>
 	</footer>
+
+	<script>
+		
+
+
+
+	</script>
 	
 </body>
 </html>
