--- a/index.html
+++ b/index.html
@@ -32,14 +32,40 @@
 		<h3 class="ra">Artículos recientes:</h3 class="">
 		<div class="artc">
 
+
 			<article id="ar1">post 5: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo totam magnam atque laborum repudiandae, esse ratione provident, nam minus, deleniti voluptatibus veritatis. Porro iste doloremque itaque obcaecati pariatur maiores repellendus.</article>
 			<article id="ar2">post 1: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia laudantium, sint cum, nihil nisi praesentium aperiam maxime rem, ipsam illum blanditiis? Maiores necessitatibus dignissimos debitis sit atque nulla voluptatum facere!</article>
 			<article id="ar3">post 2: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima quasi voluptate placeat, delectus illum, harum ad labore veritatis id eos libero veniam asperiores ducimus nihil? Veniam dolorum voluptas nesciunt magni!</article>
 			<article id="ar4">post 3: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci dolores, voluptatibus optio excepturi. Dignissimos eaque quo, quibusdam nesciunt nulla ducimus, consequuntur odit consequatur temporibus autem quidem voluptate, ea earum laudantium?</article>
-			<article id="ar5">post 4: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore aperiam, labore sequi est esse nesciunt facere ipsa obcaecati minima a, incidunt itaque odio ipsum animi ipsam autem. Ad tenetur, quae!</article>
+			<article id="ar5">post 4: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore aperiam, labore sequi est esse nesciunt facere ipsa obcaecati minima a, incidunt itaque odio ipsum animi ipsam autem. Ad tenetur, quae!</article>		
+
+
+
+
+			<article id="ar01">post 5: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia laudantium, sint cum, nihil nisi praesentium aperiam maxime rem, ipsam illum blanditiis? Maiores necessitatibus dignissimos debitis sit atque nulla voluptatum facere!
+			</article>
+			<article id="ar02">post 1: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia laudantium, sint cum, nihil nisi praesentium aperiam maxime rem, ipsam illum blanditiis? Maiores necessitatibus dignissimos debitis sit atque nulla voluptatum facere!
+			</article>
+			<article id="ar03">post 2: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima quasi voluptate placeat, delectus illum, harum ad labore veritatis id eos libero veniam asperiores ducimus nihil? Veniam dolorum voluptas nesciunt magni!</article>
+			<article id="ar04">post 3: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci dolores, voluptatibus optio excepturi. Dignissimos eaque quo, quibusdam nesciunt nulla ducimus, consequuntur odit consequatur temporibus autem quidem voluptate, ea earum laudantium?</article>
+			<article id="ar05">post 4: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore aperiam, labore sequi est esse nesciunt facere ipsa obcaecati minima a, incidunt itaque odio ipsum animi ipsam autem. Ad tenetur, quae!
+			</article>		
+
+			<article id="ar11">post 5: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo totam magnam atque laborum repudiandae, esse ratione provident, nam minus, deleniti voluptatibus veritatis. Porro iste doloremque itaque obcaecati pariatur maiores repellendus.</article>
+			<article id="ar12">post 1: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia laudantium, sint cum, nihil nisi praesentium aperiam maxime rem, ipsam illum blanditiis? Maiores necessitatibus dignissimos debitis sit atque nulla voluptatum facere!</article>
+			<article id="ar13">post 2: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima quasi voluptate placeat, delectus illum, harum ad labore veritatis id eos libero veniam asperiores ducimus nihil? Veniam dolorum voluptas nesciunt magni!</article>
+			<article id="ar14">post 3: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci dolores, voluptatibus optio excepturi. Dignissimos eaque quo, quibusdam nesciunt nulla ducimus, consequuntur odit consequatur temporibus autem quidem voluptate, ea earum laudantium?</article>
+			<article id="ar15">post 4: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore aperiam, labore sequi est esse nesciunt facere ipsa obcaecati minima a, incidunt itaque odio ipsum animi ipsam autem. Ad tenetur, quae!
+			</article>			
+
+
 
 		</div>
-		
+
+		<button type="button" class="aa" id="aa"></button>
+		<button type="button" class="as" id="as"></button>
+
+				
 		
 	
 		
@@ -65,7 +91,26 @@
 	</footer>
 
 	<script>
-		
+		const a1 = document.getElementById('ar1');
+		const a2 = document.getElementById('ar2');
+		const a3 = document.getElementById('ar3');
+		const a4 = document.getElementById('ar4');
+		const a5 = document.getElementById('ar5');
+		const previous = document.getElementById('aa');
+		const next = document.getElementById('as');
+
+		previous.addEventListener('click' , prev(ev));
+		next.addEventListener('click' , nex(ev));
+
+		function (art);
+			if (art.style.margin-left >= 1500px) {
+				return art.style.margin-left = -280px
+			} else {
+				return art.style.margin-left
+			}
+
+
+
 
 
 
