--- a/index.html
+++ b/index.html
@@ -129,11 +129,17 @@
 		
 		<div class="equipo">
 			Conoce a nuestro equipo	
-			<img src="" alt="" width="80"><img src="" alt="" width="80"><img src="" alt="" width="80">
+			<div>
+				<img src="infostaf/guillermo/guillermo.jpg" alt="" width="60">
+				<img src="" alt="" width="80">
+				<img src="infostaf/señorz/señorz.jpg" alt="" width="60">
+			</div>
+
 		</div>
 
 		<div class="contacto">
-			Contactanos a: <a href="mailto:crudo.musica@gmail.com">crudo.musica@gmail.com</a>	
+			<p>Contactanos a: </p>
+			<a href="mailto:crudo.musica@gmail.com">crudo.musica@gmail.com</a>	
 		</div>
 
 	</footer>
