--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 			Conoce a nuestro equipo	
 			<div>
 				<img src="infostaf/guillermo/guillermo.jpg" alt="" width="60">
-				<img src="" alt="" width="80">
+				<img src="infostaf/roberto/roberto.png" alt="" width="60">
 				<img src="infostaf/señorz/señorz.jpg" alt="" width="60">
 			</div>
 
