fix in social at footer

--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
 
 	<footer>
 		<div class="social">
-			<a href=""><img src="img/icon4.png" class="social social1"></a>
-			<a href=""><img src="img/icon5.png" class="social social2"></a>
+			<a href=""><img src="img/icon4.png" class="social1"></a>
+			<a href=""><img src="img/icon5.png" class="social2"></a>
 		</div>
 		
 		<div class="equipo">
