cambiado primer post1

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 				<article class="post1"> 
 					<a href="mathrock/mathrock.html"><img src="img/CHON.jpg" alt=""></a>	
 					<div class="pcon">
-						<h2>Math Rock: ¿Que significa para mi?</h2>
+						<h2>Hablemos de Math Rock</h2>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis quia molestiae pariatur natus! Praesentium temporibus in, cum illo rerum delectus repellendus ...
 						<a href="mathrock/mathrock.html" class="leer">leer mas</a>
 						</p>
