arreglado post de Math rock y detalles

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body> 
 	<header>
 		<a href="index.html" class="crudo">		
-			<img src="relaxer/img/crudologo.png" class="logo" alt="CRUDO" width="150px">
+			<img src="img/crudologo.png" class="logo" alt="CRUDO" width="150px">
 		</a>
 		<nav>
 			<ul>
@@ -131,7 +131,7 @@
 			Conoce a nuestro equipo	
 			<div>
 				<img src="infostaf/guillermo/guillermo.jpg" alt="" width="60">
-				<img src="infostaf/roberto/roberto.png" alt="" width="60">
+				<img src="infostaf/roberto/roberto.jpg" alt="" width="60">
 				<img src="infostaf/señorz/señorz.jpg" alt="" width="60">
 			</div>
 
