--- a/mathrock/mathrock.html
+++ b/mathrock/mathrock.html
@@ -1,54 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<link href="https://fonts.googleapis.com/css?family=Fira+Sans:100,200,300,400,500,600" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,400|Raleway:300,400|" rel="stylesheet">
 	<link rel="stylesheet" href="style.css">
 	<meta charset="UTF-8">
 	<title>Document</title>
 </head>
 <body>
-	<section class="top">
-		<div>
-			<header>
-				<h2 class="t1 t">CRUDO</h2>
-				<label class="t2 t">CRUDO</label>
-				<label class="t3 t" >CRUDO</label>
-				<label class="t4 t" >CRUDO</label>
-				<label class="t5 t" >CRUDO</label>
-				<label class="t6 t" >CRUDO</label>
-			</header>
-		</div>
+
+	<header>
+		<a href="../index.html" class="crudo">		
+			<img src="img/crudologo.png" class="logo" alt="CRUDO" width="150px">
+		</a>
+		<nav>
+			<ul>
+				<a href=""><li>Podcast</li></a>
+				<a href=""><li>Posts</li></a>
+				<a href=""><li>Noticias</li></a>
+			</ul>
+		</nav>
+	</header>
+	<div class="bgt">
 		<h1>Math Rock:</h1>
-	</section>
+	</div>
+
 	<section class="bot">
 		<div class="container">
 			<h2 class="subt">El Género que me devolvió al Rock</h2>
 			<div></div>
-			<p> Probablemente una de las razones por las que en su momento no perdí la fé en la guitarra electrica y la inovación musical en los subgeneros del rock fué gracias a encontrarme en la red una presentación en vivo de CHON en Audiotree en vivo por allí en 2015. Fué mi primera expocisión al Math Rock y no pude despegar ni mis oidos de los parlantes ni mis ojos del monitor durante los 25 min que duraba la presentación.</p>
+			<p> Probablemente una de las razones por las que en su momento no perdí la fe en la guitarra eléctrica y la innovación musical en los subgéneros del rock fue gracias a encontrarme en la red una presentación en vivo de CHON en Audiotree en vivo por allí en 2015. Fue mi primera exposición al Math Rock y no pude despegar ni mis oídos de los parlantes ni mis ojos del monitor durante los 25 min que duraba la presentación.</p>
 			<div></div>
-			<p> No pude evitar verme envuelto en asombro al esccuhar la forma en que se manejaban estructuras ritmicas complejas muy fuera del alcance de los tipicos generos mas tradicionales del rock que conformaban la zona de confort en la que me pocisionaba al momento de escuchar musica. Ahora no solo estructuras ritmicas sino también armonicas conformadas por seguidos acordes extendidos y arpegios ejecutados de manera quirurgica y sin dejar de dar espacio a debidos silencios cuando eran necesarios. Puede que por como lo describo pueda sonar al estilo maximo y definitivo del rock y depende de como lo mires puede ser así, sin embargo todo como sus virtudes tiene también sus defectos pero aquí no vengo a contarles lo malo sino lo bueno. Como guitarrista amateur que soy me lo que me llamó mas la atención fué precisamente ello sus guitarras sin embargo todos los instrumentos brillaban de manera aplaudible en especial la batería en este género que resalta precisamente por el enfasis en las estructuras ritmicas.</p>
+			<p> No pude evitar verme envuelto en asombro al escuchar la forma en que se manejaban estructuras rítmicas complejas muy fuera del alcance de los típicos géneros más tradicionales del rock que conformaban la zona de confort en la que me posicionaba al momento de escuchar música. Ahora no solo estructuras rítmicas sino también armónicas conformadas por seguidos acordes extendidos y arpegios ejecutados de manera quirúrgica y sin dejar de dar espacio a debidos silencios cuando eran necesarios. Puede que por como lo describo pueda sonar al estilo máximo y definitivo del rock y depende de cómo lo mires puede ser así, sin embargo, todo como sus virtudes tiene también sus defectos, pero aquí no vengo a contarles lo malo sino lo bueno. Como guitarrista amateur que soy me lo que me llamó más la atención fue precisamente ello sus guitarras sin embargo todos los instrumentos brillaban de manera aplaudible en especial la batería que en este género resalta precisamente por el énfasis en las estructuras rítmicas.</p>
 			<div></div>
 			<picture><img src="img/CHON1.jpeg" alt="" height="60%"></picture>
-			izquierda: ofjwng | centro: fjenoe | derecha:giohir
+			izquierda: Erick Hansel | centro: Nathan Camarena | derecha: Mario Camarena
 			<div></div>
-			<P>Su disco Grow es redondo y lo recomiendo mucho si nunca has escuchado al genero, al menos para mi funcionó de maravilla ya que es limpio, sin adiciones inecesarias como muchas veces se pueden encontrar en otros discos de oteas bandas del genero. Sus canciones son buenas, el disco suena bien tal cual son sus 2 guitarras, batería, bajo y alguna que otra voz en un par de canciones. Sus integrantes actuales son Mario Camarena, Erick Hansel en guitarra y Nathan Camarena en Percusiones y Batería. </P>
+			<P>Su disco Grow es redondo y lo recomiendo mucho si nunca has escuchado al género, al menos para mí funcionó de maravilla ya que es limpio, sin adiciones innecesarias como muchas veces se pueden encontrar en otros discos de otras bandas del género. Sus canciones son buenas, el disco suena bien tal cual son sus 2 guitarras, batería, bajo y alguna que otra voz en un par de canciones. Sus integrantes actuales son Mario Camarena, Erick Hansel ambos en guitarra y Nathan Camarena en Percusiones y Batería. </P>
 			<div></div>
-			<P>Sin embargo y a pesar de lo mucho que me impacto en general el estilo también he de decir que es un genero difícil de sacar a relucir del todo debido a la complejidad que conlleva el componer un tema con todo lo que implica el genero en sí y ademas de ello lograr que suene bién, sin contar el sonido tan diferente que pueden llegar a tener 2 artistas de Math Rock. Por si fuera poco también hay que tomar en cuenta que el publico que consume este tipo de musica no es el mas amplio, por lo que a mi punto de vista y por lo menos para mi es dificil encontrar los artistas o albumes que realmente merezcan la pena y que ademas encajen con mi gusto ya que hay muchos otras bandas que también son buenas pero simplemente a mi no me llaman la atención porque no logran lo que busco en el Math (razón por la que no hablo quizas de otras agrupaciones reconocidas del genero como Don Caballero o Minus the Bear por ejemplo). </P>
+			<P>Sin embargo y a pesar de lo mucho que me impacto en general el estilo también he de decir que es un tipo de musica difícil de sacar a relucir del todo debido a la complejidad que conlleva el componer un tema con la totalidad que implica el género en sí y además de ello lograr que suene bien, sin contar el sonido tan diferente que pueden llegar a tener 2 artistas de Math Rock. Por si fuera poco también hay que tomar en cuenta que el público que consume este tipo de música no es el más amplio, por lo que a mi punto de vista y por lo menos para mi es dificil encontrar los artistas o álbumes que realmente merezcan la pena y que además encajen con mi gusto ya que hay muchos otras bandas que también son buenas pero simplemente a mí no me llaman la atención porque no logran lo que busco en el Math (razón por la que no hablo quizás de otras agrupaciones reconocidas del género como Don Caballero o Minus the Bear por ejemplo). </P>
 			<div></div>
 			<picture><img src="img/TTNG.jpg" alt="" widht="600px"></picture>
 			izquierda: ofjwng | centro: fjenoe | derecha:giohir
 			<div></div>
-			<P> Por esto ultimo es que basicamente mi biblioteca musical en cuanto a Math Rock poco menos que se reduce solamente a escuchar CHON y This Town Needs Guns A.K.A TTNG.
-De este ultimo también rescato mucho, su sonido también es muy limpio y en este caso si que nos encontramos con mas uso de la voz humana y aunque esta muchas veces pasa a segundo plano por las caracteristicas del genero no es el caso de TTNG en cuyas composiciones la voz no es un elemento forzado sino un complemento que encaja a la perfección con su estilo aportando melodía y por supuesto significado lirico. Sus integrantes actuales los conforman Henry Tremain en voz/bajo/guitarra, Tim Collis en la primera Guitarra y Chris Collis en la Batería.</P>
+			<P> Por esto último es que básicamente mi espectro de grupos cuando me pongo a escuchar MathRock se refiere poco menos que se reduce solamente a escuchar CHON y This Town Needs Guns A.K.A TTNG.
+De este último también rescato mucho, su sonido también es muy limpio y en este caso sí que nos encontramos con más uso de la voz humana y aunque sería normal esperar que esta pasara a segundo plano por las características del genero, no es el caso de TTNG en cuyas composiciones la voz no es un elemento forzado sino un complemento que encaja a la perfección con su estilo aportando melodía y por supuesto significado lirico. Sus integrantes actuales los conforman Henry Tremain en voz/bajo/guitarra, Tim Collis en la primera Guitarra y Chris Collis en la Batería.
+</P>
 			<div></div>
 			<picture><img src="img/TTNG2.jpg" alt=""></picture>
 			<div></div>
-			<P> De este genial Te aconsejo escuchar el que si no me equivoco es su primer disco de estudio llamado Animals cuyos temas son todos titulados como animales de los cuales te recomiendo escuchar Chinchilla, Baboon y Gibbon por si no te animas con el disco completo.</P>
+			<P> De esta genial agrupación Te aconsejo escuchar el que si no me equivoco es su primer disco de estudio llamado Animals cuyos temas son todos titulados como animales (si, igual que Pink FLoyd) de los cuales te recomiendo escuchar Chinchilla, Baboon y Gibbon por si no te animas con el disco completo.</P>
 			<div></div>
-			<P> Obiamente no soy un versado en lo que a Math Rock respecta y espero irme sumergiendo cada vez mas en las bondades y grupos que el genero ofrece que probablemente aun no he tenido la suerte de conocer. Aun me queda Mucho por descubrir y espero que con esta especie de reseña/historia de como conocí este estilo te veas tan entusiasmado como yo de conocer mas acerca de él.</P>
+			<P> Obviamente no soy un versado en lo que a Math Rock respecta y espero irme sumergiendo cada vez más en las bondades y grupos que el género ofrece que probablemente aún no he tenido la suerte de conocer. Me queda Mucho por descubrir y espero que con esta especie de reseña/historia de cómo conocí este estilo te veas tan entusiasmado como yo de conocer más acerca de él.</P>
 		</div>
 		<div></div>
 	</section>
-	<footer></footer>
+	<footer>
+		<div class="social">
+			<a href=""><img src="img/icon4.png" class="social1"></a>
+			<a href=""><img src="img/icon5.png" class="social2"></a>
+		</div>
+		
+		<div class="equipo">
+			Conoce a nuestro equipo	
+			<div>
+				<img src="img/guillermo.jpg" alt="" width="60">
+				<img src="img/roberto.jpg" alt="" width="60">
+				<img src="img/señorz.jpg" alt="" width="60">
+			</div>
+
+		</div>
+
+		<div class="contacto">
+			<p>Contactanos a: </p>
+			<a href="mailto:crudo.musica@gmail.com">crudo.musica@gmail.com</a>	
+		</div>
+
+	</footer>
 </body>
 </html>
