mejorado el post de relaxer

--- a/relaxer/relaxer.html
+++ b/relaxer/relaxer.html
@@ -44,53 +44,116 @@
 
 		<h2>Lo nuevo de Alt-J en este 2017</h2>
 		<figure>
-			<img src="img/relaxer.jpg" alt="" width="60%">
+			<picture><img src="img/relaxer.jpg" alt="" width="60%"></picture>
+			
 		</figure>
-		<p>
-			Relaxer es el nombre del nuevo disco de estudio......jowñofijwep wrvn vpirw l 0pvp rfp0pir f pvjefpo fpqef fieq v duq0pefqegqg w euf efou feoufb 
-			efefjo fioe fpqe fpqe0p epf eqwefwernfp0pef eprgwr fe fe0p0pñ oe qepf efperwgqq epf eqfpeq fepf f
-		</p>
-		<div></div>
-		<p>
-			ho wfbbofbgrij fbb  wep wrvn  gvpirw l vp rfpirf pvjefpo fpqef fieq v duqef euf efou feoufb 
-			efefjo fioe fpqe fprgwrg wrvg0prw wrrqe 00per0pwvw p  eqbrfpef ewfvrwrv bwbw pfeb ggbebwr feñ oe qepf efpeq epf eqfpeq fepf 0pf
-		</p>
-		<div></div>
-		<p>
-			gowñofijwep wrvn vpirw l vp rwb rwrwfpirf pvrqgjefpo fpqef fieq v duqef euf efou feoufb 
-			efefjo fioe fpqe fpqe epfwrgbrweqfpef ewrpfe feñ oe qepf efpwveq epf eqfpeq fepf f
-		</p>
-		<div></div>
-		<p>
-			cowñofijwep wrvn vpirgrgwrw l vrwg p rfpirf pvjefpo b wf fpqef fieq v duqef euf eforwgurw feoufb 
-			efefjo fioe fpqe fpqe w epfw eqfpef epfewwr wrg feñ oe qegwggwrgwrrpf efwrgq erwgpf eqfpeq fepf f
-		</p>
-		<div></div>
-		<img src="img/altj1.jpg" alt="" width="100%">
-		<div></div>
-		<p>
-			kqrvgrg bwrgrwofij wrgwrgep wrvvw wrgpen efikilpqel 0p0 códp0pv djbajdnc  dcef euf efou feoufb 
-			efe fjoadv  brgqrgqrglo p wrgbw bwprw wf0pvlo qepf e0p0pfpeq epf eqfpeq fepf f
-		</p>
-		<p>
-			ho wfbbofbgrij fbb  wep wrvn  gvpirw l vp rfpirf pvjefpo fpqef fieq v duqef euf efou feoufb 
-			efefjo fioe fpqe fprgwrg wrvg0prw wrrqe 00per0pwvw p  eqbrfpef ewfvrwrv bwbw pfeb ggbebwr feñ oe qepf efpeq epf eqfpeq fepf 0pf
-		</p>
-		<div></div>
-		<p>
-			gowñofijwep wrvn vpirw l vp rwb rwrwfpirf pvrqgjefpo fpqef fieq v duqef euf efou feoufb 
-			efefjo fioe fpqe fpqe epfwrgbrweqfpef ewrpfe feñ oe qepf efpwveq epf eqfpeq fepf f
-		</p>
-		<div></div>
-		<p>
-			cowñofijwep wrvn vpirgrgwrw l vrwg p rfpirf pvjefpo b wf fpqef fieq v duqef euf eforwgurw feoufb 
-			efefjo fioe fpqe fpqe w epfw eqfpef epfewwr wrg feñ oe qegwggwrgwrrpf efwrgq erwgpf eqfpeq fepf f
-		</p>
-		<div></div>
-		<div></div>		
+
+		<div class="versiones">
+			<h3>En esta ocación ambos cofundadores de Crudo han preparado review propia</h3>
+			<h4>haz click sobre la imagen de la review de que desees leer</h4>
+			<button class="guillermo au" id="guillermo" onclick="f1()"></button>
+			<button class="roberto au" id="roberto" onclick="f2()"></button>
+		</div>
+		<div class="espaciador" id="espaciador">
+			
+		</div>
+
+		<div class="G1 esconder" id="G1">
+			
+			<p>
+				Relaxer es el nombre del nuevo disco de estudio......jowñofijwep wrvn vpirw l 0pvp rfp0pir f pvjefpo fpqef fieq v duq0pefqegqg w euf efou feoufb 
+				efefjo fioe fpqe fpqe0p epf eqwefwernfp0pef eprgwr fe fe0p0pñ oe qepf efperwgqq epf eqfpeq fepf f
+			</p>
+			<div></div>
+			<p>
+				ho wfbbofbgrij fbb  wep wrvn  gvpirw l vp rfpirf pvjefpo fpqef fieq v duqef euf efou feoufb 
+				efefjo fioe fpqe fprgwrg wrvg0prw wrrqe 00per0pwvw p  eqbrfpef ewfvrwrv bwbw pfeb ggbebwr feñ oe qepf efpeq epf eqfpeq fepf 0pf
+			</p>
+			<div></div>
+			<p>
+				gowñofijwep wrvn vpirw l vp rwb rwrwfpirf pvrqgjefpo fpqef fieq v duqef euf efou feoufb 
+				efefjo fioe fpqe fpqe epfwrgbrweqfpef ewrpfe feñ oe qepf efpwveq epf eqfpeq fepf f
+			</p>
+			<div></div>
+			<p>
+				cowñofijwep wrvn vpirgrgwrw l vrwg p rfpirf pvjefpo b wf fpqef fieq v duqef euf eforwgurw feoufb 
+				efefjo fioe fpqe fpqe w epfw eqfpef epfewwr wrg feñ oe qegwggwrgwrrpf efwrgq erwgpf eqfpeq fepf f
+			</p>
+			<div></div>
+			<img src="img/altj1.jpg" alt="" width="100%">
+			<div></div>
+			<p>
+				kqrvgrg bwrgrwofij wrgwrgep wrvvw wrgpen efikilpqel 0p0 códp0pv djbajdnc  dcef euf efou feoufb 
+				efe fjoadv  brgqrgqrglo p wrgbw bwprw wf0pvlo qepf e0p0pfpeq epf eqfpeq fepf f
+			</p>
+			<p>
+				ho wfbbofbgrij fbb  wep wrvn  gvpirw l vp rfpirf pvjefpo fpqef fieq v duqef euf efou feoufb 
+				efefjo fioe fpqe fprgwrg wrvg0prw wrrqe 00per0pwvw p  eqbrfpef ewfvrwrv bwbw pfeb ggbebwr feñ oe qepf efpeq epf eqfpeq fepf 0pf
+			</p>
+			<div></div>
+			<p>
+				gowñofijwep wrvn vpirw l vp rwb rwrwfpirf pvrqgjefpo fpqef fieq v duqef euf efou feoufb 
+				efefjo fioe fpqe fpqe epfwrgbrweqfpef ewrpfe feñ oe qepf efpwveq epf eqfpeq fepf f
+			</p>
+			<div></div>
+			<p>
+				cowñofijwep wrvn vpirgrgwrw l vrwg p rfpirf pvjefpo b wf fpqef fieq v duqef euf eforwgurw feoufb 
+				efefjo fioe fpqe fpqe w epfw eqfpef epfewwr wrg feñ oe qegwggwrgwrrpf efwrgq erwgpf eqfpeq fepf f
+			</p>
+		</div>
+		<div class="R1 esconder" id="R1">
+			
+			<p>
+				Si una banda que se tenía cantado su regreso este 2017, esa era Alt j,  es difícil pensar que en tan solo 5 ya van en su tercer disco de estudio, es eso lo que analizaremos con mi compañero Guillermo, así es señores, preparen sus retinas para una reseña tajante y por supuesto “cruda” de lo que podría ser el trabajo más alternativo de la banda, esto es “Relaxer” la reseña.
+			</p>
+			<div></div>
+			<p>
+				Partimos nuestro viaje con “3WW” o “three worn words “para los más bilingües, fue el primer adelanto que filtro la banda antes del lanzamiento oficial del disco, una canción que con el tiempo ya se ha convertido en un éxito, de la estructura de la canción, no hay que nada que discutir, una estructura bastante equilibrada, ningún elemento esta demás, la colavoracion de Ellie rowsell en la voz va como anillo al dedo y de la versión en vivo de este tema es digno de aplaudir.
+			</p>
+			<div></div>
+			<p>
+				Seguimos con “In cold blood”, tema que también se filtró (cabe decir que tanto in cold blood y 3ww ya poseen video clip) “01110011” aún sigo intentando entender que significa ese código binario... En fin, el tema te saca del mantra de 3ww, cosa que no es mala por que le quita el dinamismo al álbum, vendría siendo algo asi como el fitzpleasure del relaxer (tema del primer disco de Alt j).
+			</p>
+
+
+
+
+
+			<div></div>
+			<img src="img/altj1.jpg" alt="" width="100%">
+			<div></div>
+						
+			<p>
+				Otro tema que me quise detener fue “House of the rising sun”, uno ve el título y lo primero que dice “oh un cover “, tiene partes del tema de the animals pero obviamente con el sello de Alt j, incluso cambios en la letra y un coro aparte, admito que no soy el más fan de esta adaptación, a la larga se vuelve un poco tediosa, pero se admira que no hayan hecho una adaptación fiel a la original y hayan experimentado.
+			</p>
+			<div></div>
+			<p>
+				Luego viene “hit me like that snare” en lo personal encuentro que no es un tema muy a destacar, creo que el audio no favorece los 3 minutos y medio que dura la canción.
+			</p>
+			<p>
+				Seguimos con “deadcrush” debo decir que como gran fan de los punteos (en guitarra) y las distorsiones, la tonada es bastante confortante y el coro se vuelve bastante entretenido, buena rola.
+			</p>
+			<div></div>
+			<p>
+				El tema que lo sigue es a destacar, hablamos de “Adeline”, cabe decir que este fue el tercer tema filtrado del disco, si bien yo lo escuche recién cuando lanzaron oficialmente el álbum, para mí el mejor tema del disco. Tiene lo que buscamos y ya extrañábamos de los 2 discos anteriores, un comienzo tranquilo, acompañado de un raqueo pacifico sazonado con las voces armónicas de Joe y Gus, un puente que te deja en trance para luego despertarte de el con un coro angelical que no para hasta el final.
+			</p>
+			<div></div>
+			<p>
+				Ya vamos llegando a la cuesta final, nos encontramos con “Last year”, no podía faltar el tema acústico en el disco, la voz de Joe Newman se complementa bastante con las voces femeninas.
+			</p>
+			<div></div>
+			<p>
+				Finalmente , cerramos el telón con “Pleader”
+			</p>
+			
+		</div>
+		
 	</section>
 	<section class="autor">
-		<article> <img src="img/yo.jpg" alt="" width="50px">Guillermo Del Pino	
+		<article class="G1 esconder" id="G2"> <img src="img/guillermo.jpg" alt="" width="50px">Guillermo Del Pino	
+			<p>bla bla bla bla estudiante de ingieria bla bla bla guitarrista amteur bla bla bla</p>
+		</article>
+		<article class="R1 esconder" id="R2"> <img src="img/roberto.jpeg" alt="" width="50px">Roberto Avello	
 			<p>bla bla bla bla estudiante de ingieria bla bla bla guitarrista amteur bla bla bla</p>
 		</article>
 	</section>
@@ -99,6 +162,30 @@
 		<a href=""><img src="../img/icon4.png" class="social social1"></a>
 		<a href=""><img src="../img/icon5.png" class="social social2"></a>
 	</footer>
+
+
+	<script>
+		function f1() {
+			const s = document.getElementById('espaciador')
+			const G1 = document.getElementById("G1")
+			const R1 = document.getElementById("R1")
+			G1.className = "G1"
+			R1.className = "R1"
+			R1.classList.add('esconder')
+			s.classList.add('esconder')
+		}
+
+		function f2() { 			
+			const s = document.getElementById('espaciador')
+			const G1 = document.getElementById("G1")
+			const R1 = document.getElementById("R1")
+			G1.className = 'G1'
+			R1.className = 'R1'
+			G1.classList.add('esconder')
+			s.classList.add('esconder')
+		}
+
+	</script>
 	
 </body>
 </html>
