--- a/relaxer/relaxer.html
+++ b/relaxer/relaxer.html
@@ -122,7 +122,7 @@
 			<div></div>
 			<img src="img/altj1.jpg" alt="" width="100%">
 			<div></div>
-						
+
 			<p>
 				Otro tema que me quise detener fue “House of the rising sun”, uno ve el título y lo primero que dice “oh un cover “, tiene partes del tema de the animals pero obviamente con el sello de Alt j, incluso cambios en la letra y un coro aparte, admito que no soy el más fan de esta adaptación, a la larga se vuelve un poco tediosa, pero se admira que no hayan hecho una adaptación fiel a la original y hayan experimentado.
 			</p>
@@ -169,8 +169,14 @@
 			const s = document.getElementById('espaciador')
 			const G1 = document.getElementById("G1")
 			const R1 = document.getElementById("R1")
-			G1.className = "G1"
-			R1.className = "R1"
+			const G2 = document.getElementById("G2")
+			const R2 = document.getElementById("R2")
+
+			G1.className = 'G1'
+			G2.className = 'G2'
+			R1.className = 'R1'
+			R2.className = 'R2'
+			R2.classList.add('esconder')
 			R1.classList.add('esconder')
 			s.classList.add('esconder')
 		}
@@ -179,8 +185,13 @@
 			const s = document.getElementById('espaciador')
 			const G1 = document.getElementById("G1")
 			const R1 = document.getElementById("R1")
+			const G2 = document.getElementById("G2")
+			const R2 = document.getElementById("R2")
 			G1.className = 'G1'
+			G2.className = 'G2'
 			R1.className = 'R1'
+			R2.className = 'R2'
+			G2.classList.add('esconder')
 			G1.classList.add('esconder')
 			s.classList.add('esconder')
 		}
